--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "react-bootstrap": "^2.10.7",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-router-bootstrap": "^0.26.3",
     "react-router-dom": "^7.1.1",
-    "react-scripts": "5.0.1"
+    "react-scripts": "5.0.1",
+    "react-toastify": "^11.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,6 +48,7 @@
   },
   "devDependencies": {
     "@types/node": "^22.10.2",
+    "@types/react-router-bootstrap": "^0.26.6",
     "axios": "^1.7.9"
   }
 }
